--- a/index.html
+++ b/index.html
@@ -45,6 +45,8 @@
 
     <script type="text/javascript" src="java.js"></script>
 
+    <script type="text/javascript" src="wmsMapType.js"></script>
+
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAPp8bY1glrU82av--mNVFFNBFfV-qTeV0&callback=initMap"></script>
   </body>
 </html>
