--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </nav><!-- .cd-vertical-nav -->
 
     <div id="side-home" class="side">
-      <p>Hello, Welcome!</p>
+      <h1 id="homeHeading">Delft Dashboard</h1>
     </div>
     <div id="side-mobility" class="side">
       <ul class="context-menu">
