--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   </head>
 
   <body>
+    <div id="info-box">?</div>
     <nav class="cd-vertical-nav" id="myDiv">
       <ul class="nav-menu" id="navigation">
         <li class="navlist"><i class="material-icons md-48" id="icon-living">home</i></li>
