--- a/index.html
+++ b/index.html
@@ -30,19 +30,27 @@
       <ul class="context-menu">
         <li>
             <div class="wrapper">
-                <i class="material-icons md-48">directions_bike</i>
-                <h2 class="heading">Bike Tracks</h2>
-                <input type="button" value="Bike Tracks: OFF" id="BikeButton" onclick="bikeOnOff();">
+                <div class="wrapper-left">
+                    <i class="material-icons wrap">directions_bike</i>
+                </div>
+                <div class="wrapper-right">
+                    <h2 class="heading">Bike Tracks</h2>
+                    <input type="button" value="Bike Tracks: OFF" id="BikeButton" onclick="bikeOnOff();">
+                </div>
             </div>
-            <p>This is some sample text for bikes and what this functionality. Lorem Ipsum.</p>
+            <p class="paragraph">This is some sample text for bikes and what this functionality. Lorem Ipsum.</p>
         </li>
         <li>
             <div class="wrapper">
-                <i class="material-icons md-48">traffic</i>
-                <h2 class="heading">Traffic View</h2>
-                <input type="button" value="Traffic: OFF" id="TrafficButton" onclick="trafficOnOff();">
+                <div class="wrapper-left">
+                    <i class="material-icons md-48">traffic</i>
+                </div>
+                <div class="wrapper-right">
+                    <h2 class="heading">Traffic View</h2>
+                    <input type="button" value="Traffic: OFF" id="TrafficButton" onclick="trafficOnOff();">
+                </div>
             </div>
-            <p>This is some sample text for traffic and what this functionality can do if you turn it on! Press the button if you want to see how it works.</p>
+            <p class="paragraph">This is some sample text for traffic and what this functionality can do if you turn it on! Press the button if you want to see how it works.</p>
         </li>
       </ul>
     </div>
@@ -52,11 +60,15 @@
       <ul class="context-menu">
         <li>
           <div class="wrapper">
-            <i class="material-icons md-48">nature_people</i>
-            <h2 class="heading">Green Spaces</h2>
-            <input type="button" value="Greenery: OFF" id="GreenButton" onclick="greenOnOff();">
+              <div class="wrapper-left">
+                    <i class="material-icons md-48">nature_people</i>
+              </div>
+              <div class="wrapper-right">
+                    <h2 class="heading">Green Spaces</h2>
+                    <input type="button" value="Greenery: OFF" id="GreenButton" onclick="greenOnOff();">
+              </div>
           </div>
-          <p>This is some sample text for green spaces and how it works!</p>
+          <p class="paragraph">This is some sample text for green spaces and how it works!</p>
         </li>
       </ul>  
     </div>
