--- a/index.html
+++ b/index.html
@@ -74,9 +74,9 @@
       
     <div class ="map-wrapper"> 
       <div id="map"></div>
-        <div class="""slidecontainer">
+        <div class="slidecontainer">
           <h1>Add houses pls</h1>
-          <input type="range" min="1" max="100" value="50" class="slider" id="myRange" onchange="updateSlider(this.value)">
+          <input type="range" min="1" max="300" value="50" class="slider" id="myRange" onchange="updateSlider(this.value)">
           <p>Houses: <span id="demo"></span></p>
         </div>
         
