--- a/index.html
+++ b/index.html
@@ -72,10 +72,24 @@
         </li>
       </ul>  
     </div>
-
-    <div id="map">
+    
+    <div id="container-map">
+        <div id="container-legend">
+            <h3>Legend</h3>
+            <div id="content-biketracks" class="legend-content">
+              <p>Bike Tracks</p>
+            </div>
+            <div id="content-trafficview" class="legend-content">
+              <p>Traffic View</p>
+            </div>
+            <div id="content-greenspaces" class="legend-content">
+              <p>Green Spaces</p>
+            </div>
+        </div>        
+        <div id="map">
+        </div>
     </div>
-
+    
     <script type="text/javascript" src="java.js"></script>
 
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAPp8bY1glrU82av--mNVFFNBFfV-qTeV0&callback=initMap"></script>
