--- a/index.html
+++ b/index.html
@@ -76,13 +76,13 @@
     <div id="container-map">
         <div id="container-legend">
             <h3>Legend</h3>
-            <div id="content-biketracks" class="legend-content">
+            <div id="legend-biketracks" class="legend-hidden">
               <p>Bike Tracks</p>
             </div>
-            <div id="content-trafficview" class="legend-content">
+            <div id="legend-trafficview" class="legend-hidden">
               <p>Traffic View</p>
             </div>
-            <div id="content-greenspaces" class="legend-content">
+            <div id="legend-greenspaces" class="legend-hidden">
               <p>Green Spaces</p>
             </div>
         </div>        
