--- a/index.html
+++ b/index.html
@@ -12,20 +12,55 @@
   <body>
     <nav class="cd-vertical-nav" id="myDiv">
       <ul class="nav-menu" id="navigation">
-        <li class="navlist"><i class="material-icons md-48" id="icon-living">home</i></li>
-        <li class="navlist" id="icon-mobility" onclick="show('side-mobility'); active('icon-mobility');"><i class="material-icons md-48" >directions_bike</i></li>
-        <li class="navlist"><i class="material-icons md-48" id="icon-work">work</i></li>
-        <li class="navlist" id="icon-qol" onclick="show('side-qol'); active('icon-qol')" ><i class="material-icons md-48" >nature_people</i></li>
-        <li class="navlist"><svg class ="material-icons md-48" id="icon-sustain" style="width:48px;height:48px" viewBox="0 0 24 24" onclick="show('side-qol')">
-        <path d="M21.82,15.42L19.32,19.75C18.83,20.61 17.92,21.06 17,21H15V23L12.5,18.5L15,14V16H17.82L15.6,12.15L19.93,9.65L21.73,12.77C22.25,13.54 22.32,14.57 21.82,15.42M9.21,3.06H14.21C15.19,3.06 16.04,3.63 16.45,4.45L17.45,6.19L19.18,5.19L16.54,9.6L11.39,9.69L13.12,8.69L11.71,6.24L9.5,10.09L5.16,7.59L6.96,4.47C7.37,3.64 8.22,3.06 9.21,3.06M5.05,19.76L2.55,15.43C2.06,14.58 2.13,13.56 2.64,12.79L3.64,11.06L1.91,10.06L7.05,10.14L9.7,14.56L7.97,13.56L6.56,16H11V21H7.4C6.47,21.07 5.55,20.61 5.05,19.76Z"/>
-        </svg></li>
-        <li class="navlist"><i class="material-icons md-48" id="icon-school">school</i></li>
+        <li class="navlist" id="icon-living" onclick="show('side-living'); active('icon-living');">
+          <i class="material-icons md-48")">home</i>
+        </li>
+
+        <li class="navlist" id="icon-mobility" onclick="show('side-mobility'); active('icon-mobility');">
+          <i class="material-icons md-48">directions_bike</i>
+        </li>
+
+        <li class="navlist" id="icon-work" onclick="show('side-work'); active('icon-work')">
+          <i class="material-icons md-48">work</i>
+        </li>
+
+        <li class="navlist" id="icon-qol" onclick="show('side-qol'); active('icon-qol')" >
+          <i class="material-icons md-48" >nature_people</i>
+        </li>
+
+        <li class="navlist" id="icon-sustain" onclick="show('side-sustain'); active('icon-sustain')">
+          <svg class ="material-icons md-48" style="width:48px;height:48px" viewBox="0 0 24 24">
+          <path d="M21.82,15.42L19.32,19.75C18.83,20.61 17.92,21.06 17,21H15V23L12.5,18.5L15,14V16H17.82L15.6,12.15L19.93,9.65L21.73,12.77C22.25,13.54 22.32,14.57 21.82,15.42M9.21,3.06H14.21C15.19,3.06 16.04,3.63 16.45,4.45L17.45,6.19L19.18,5.19L16.54,9.6L11.39,9.69L13.12,8.69L11.71,6.24L9.5,10.09L5.16,7.59L6.96,4.47C7.37,3.64 8.22,3.06 9.21,3.06M5.05,19.76L2.55,15.43C2.06,14.58 2.13,13.56 2.64,12.79L3.64,11.06L1.91,10.06L7.05,10.14L9.7,14.56L7.97,13.56L6.56,16H11V21H7.4C6.47,21.07 5.55,20.61 5.05,19.76Z"/>
+          </svg>
+        </li>
+
+        <li class="navlist" id="icon-facilities" onclick="show('side-facilities'); active('icon-facilities')">
+          <i class="material-icons md-48">school</i>
+        </li>
         </ul>
     </nav><!-- .cd-vertical-nav -->
 
     <div id="side-home" class="side">
       <h1 id="homeHeading">Delft Dashboard</h1>
     </div>
+
+    <div id="side-living" class="side"> 
+      <ul class="context-menu">
+        <li>
+          <div class="wrapper">
+              <div class="wrapper-left">
+                <i class="material-icons md-48">home</i>
+              </div>
+              <div class="wrapper-right">
+                <h2 class="heading">Living Test</h2>
+                <input type="button" value="Greenery: OFF" id="GreenButton" onclick="greenOnOff();">
+              </div>
+          </div>
+          <p class="paragraph">BUTTON TURNS ON GREENERY</p>
+        </li>
+      </ul>  
+    </div>
+
     <div id="side-mobility" class="side">
       <ul class="context-menu">
         <li>
@@ -55,20 +90,70 @@
       </ul>
     </div>
       
+    <div id="side-work" class="side">
+      <ul class="context-menu">
+        <li>
+          <div class="wrapper">
+              <div class="wrapper-left">
+                <i class="material-icons md-48">work</i>
+              </div>
+              <div class="wrapper-right">
+                <h2 class="heading">Work Test</h2>
+                <input type="button" value="Greenery: OFF" id="GreenButton" onclick="greenOnOff();">
+              </div>
+          </div>
+          <p class="paragraph">BUTTON TURNS ON GREENERY</p>
+        </li>
+      </ul>  
+    </div>
 
     <div id="side-qol" class="side">
       <ul class="context-menu">
         <li>
           <div class="wrapper">
               <div class="wrapper-left">
-                    <i class="material-icons md-48">nature_people</i>
+                <i class="material-icons md-48">nature_people</i>
               </div>
               <div class="wrapper-right">
-                    <h2 class="heading">Green Spaces</h2>
-                    <input type="button" value="Greenery: OFF" id="GreenButton" onclick="greenOnOff();">
+                <h2 class="heading">Green Spaces</h2>
+                <input type="button" value="Greenery: OFF" id="GreenButton" onclick="greenOnOff();">
               </div>
           </div>
           <p class="paragraph">This is some sample text for green spaces and how it works!</p>
+        </li>
+      </ul>  
+    </div>
+
+    <div id="side-sustain" class="side">
+      <ul class="context-menu">
+        <li>
+          <div class="wrapper">
+              <div class="wrapper-left">
+                <i class="material-icons md-48">restore_from_trash</i>
+              </div>
+              <div class="wrapper-right">
+                <h2 class="heading">Sustain Test</h2>
+                <input type="button" value="Greenery: OFF" id="GreenButton" onclick="greenOnOff();">
+              </div>
+          </div>
+          <p class="paragraph">BUTTON TURNS ON GREENERY</p>
+        </li>
+      </ul>  
+    </div>
+
+    <div id="side-facilities" class="side">
+      <ul class="context-menu">
+        <li>
+          <div class="wrapper">
+              <div class="wrapper-left">
+                <i class="material-icons md-48">school</i>
+              </div>
+              <div class="wrapper-right">
+                <h2 class="heading">Facilities Test</h2>
+                <input type="button" value="Greenery: OFF" id="GreenButton" onclick="greenOnOff();">
+              </div>
+          </div>
+          <p class="paragraph">BUTTON TURNS ON GREENERY</p>
         </li>
       </ul>  
     </div>
