--- a/index.html
+++ b/index.html
@@ -125,6 +125,18 @@
           </div>
           <p class="paragraph">This is some sample text for green spaces and how it works!</p>
         </li>
+        <li>
+          <div class="wrapper">
+              <div class="wrapper-left">
+                <i class="material-icons md-48">directions_car</i>
+              </div>
+              <div class="wrapper-right">
+                <h2 class="heading">Parking Spots</h2>
+                <input type="button" value="Parking: OFF" id="ParkingButton" onclick="parkingOnOff();">
+              </div>
+          </div>
+          <p class="paragraph">This is some sample text for green spaces and how it works!</p>
+        </li>
       </ul>  
     </div>
 
@@ -174,6 +186,9 @@
             <div id="legend-greenspaces" class="legend-hidden">
               <p>Green Spaces</p>
             </div>
+			<div id="legend-parkingspaces" class="legend-hidden">
+			  <p>Parking Spaces</p>
+			</div>
         </div>        
         <div id="map">
         </div>
