--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     </div>
 
     <div id="side-living" class="side"> 
-      <ul class="context-menu">
+      <!-- <ul class="context-menu">
         <li>
           <div class="wrapper">
               <div class="wrapper-left">
@@ -62,7 +62,7 @@
           </div>
           <p class="paragraph">BUTTON TURNS ON GREENERY</p>
         </li>
-      </ul>  
+      </ul>   -->
     </div>
 
     <div id="side-mobility" class="side">
@@ -95,7 +95,7 @@
     </div>
       
     <div id="side-work" class="side">
-      <ul class="context-menu">
+      <!-- <ul class="context-menu">
         <li>
           <div class="wrapper">
               <div class="wrapper-left">
@@ -108,7 +108,7 @@
           </div>
           <p class="paragraph">BUTTON TURNS ON GREENERY</p>
         </li>
-      </ul>  
+      </ul>   -->
     </div>
 
     <div id="side-qol" class="side">
@@ -141,7 +141,7 @@
     </div>
 
     <div id="side-sustain" class="side">
-      <ul class="context-menu">
+      <!-- <ul class="context-menu">
         <li>
           <div class="wrapper">
               <div class="wrapper-left">
@@ -154,11 +154,11 @@
           </div>
           <p class="paragraph">BUTTON TURNS ON GREENERY</p>
         </li>
-      </ul>  
+      </ul>   -->
     </div>
 
     <div id="side-facilities" class="side">
-      <ul class="context-menu">
+<!--       <ul class="context-menu">
         <li>
           <div class="wrapper">
               <div class="wrapper-left">
@@ -171,7 +171,7 @@
           </div>
           <p class="paragraph">BUTTON TURNS ON GREENERY</p>
         </li>
-      </ul>  
+      </ul>   -->
     </div>
     
     <div class ="container-map">
