--- a/index.html
+++ b/index.html
@@ -13,12 +13,24 @@
 	<div id="tutorial">
 		<ul id="tutorial-content">
 			<li>
-				<h3>Welcome!</h3>
+				<h2>Welcome!</h2>
 			</li>	
 			
 			<li>
 				<p>This is some sample lorem ipsum.</p>
 			</li>
+			<li>
+				<p>Some quick gestures you can perform to help you easily access this app:</p>
+			</li>
+			
+			<img src="https://i.imgur.com/GUa4WmB.png">
+			
+			<br>
+			
+			<input type="checkbox" id="tutOn" style="margin-top: 32px; margin-left: 16px; margin-right: 16px; margin-bottom: 32px;"  name="tutOn">
+			<label for="tutOn">Never display tutorial again</label>
+			<br>
+			<input type="button" value="Go to Dashboard" onclick="checkHide()">
 		</ul>
 	</div>
 	  
