--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 				<p>Some quick gestures you can perform to help you easily access this app:</p>
 			</li>
 			
-			<img src="/gestures.png">
+			<img style="width: 350px;" src="/gestures.png">
 			
 			<br>
 			
@@ -36,8 +36,9 @@
 	  
     <nav class="cd-vertical-nav" id="myDiv">
       <ul class="nav-menu" id="navigation">
-		<li class="navlist" id="icon-home" onclick="show('side-home'); active('icon-home'); ">
-			<img src="logo">
+		<li class="navlist" id="icon-home" onclick="show('side-home'); active('icon-home');">
+			<img id="blue" src="/logoblue.png" style="width: 4em; display: inline-grid ">
+			<img id="white" src="/logowhite.png" style="width: 4em; display: none;">
 		</li>
 		
         <li class="navlist" id="icon-living" onclick="show('side-living'); active('icon-living');">
