--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@ on the map. </p>
                 </div>
                 <div class="wrapper-right">
                     <h2 class="heading">Businesses</h2>
-                    <input type="button" value="Traffic: OFF" id="TrafficButton" onclick="trafficOnOff();">
+                    <input type="button" value="OFF" id="BusinessesButton" onclick="businessesOnOff();">
                 </div>
             </div>
             <p class="paragraph">placeholder</p>
@@ -292,7 +292,7 @@ on the map. </p>
               </div>
               <div class="wrapper-right">
                 <h2 class="heading">General Stores</h2>
-                <input type="button" value="Greenery: OFF" id="GreenButton" onclick="greenOnOff();">
+                <input type="button" value="OFF" id="StoresButton" onclick="storesOnOff();">
               </div>
           </div>
           <p class="paragraph">placeholder</p>
@@ -305,7 +305,7 @@ on the map. </p>
                 </div>
                 <div class="wrapper-right">
                     <h2 class="heading">Supermarkets</h2>
-                    <input type="button" value="Traffic: OFF" id="TrafficButton" onclick="trafficOnOff();">
+                    <input type="button" value="OFF" id="SupermarketsButton" onclick="supermarketsOnOff();">
                 </div>
             </div>
             <p class="paragraph">placeholder</p>
@@ -334,6 +334,15 @@ on the map. </p>
       		  </div>
       		  <div id="legend-wijken" class="legend-hidden">
       		  <p>Districts</p>
+      		</div>
+      		  <div id="legend-businesses" class="legend-hidden">
+      		  <p>Businesses</p>
+      		</div>
+      		 <div id="legend-stores" class="legend-hidden">
+      		  <p>Stores</p>
+      		</div>
+      		 <div id="legend-supermarkets" class="legend-hidden">
+      		  <p>Supermarkets</p>
       		</div>
         </div> 
         <div id="meterContainer">
