--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
                 </div>
                 <div class="wrapper-right">
                     <h2 class="heading">Traffic View</h2>
-                    <input type="button" value="Traffic: OFF" id="TrafficButton" onclick="trafficOnOff();">
+                    <input type="button" value="OFF" id="TrafficButton" onclick="trafficOnOff();">
                 </div>
             </div>
             <p class="paragraph">This sub-category attempts to visualise the flow of traffic 
@@ -164,7 +164,7 @@ traffic flow is. </p>
                 </div>
                 <div class="wrapper-right">
                     <h2 class="heading">Bike Tracks</h2>
-                    <input type="button" value="Bike Tracks: OFF" id="BikeButton" onclick="bikeOnOff();">
+                    <input type="button" value="OFF" id="BikeButton" onclick="bikeOnOff();">
                 </div>
             </div>
             <p class="paragraph">This category looks at the flow of bikers through the city. 
@@ -179,7 +179,7 @@ the city, and using colour intensity to visualise busyness.</p>
               </div>
               <div class="wrapper-right">
                 <h2 class="heading">Parking Spots</h2>
-                <input type="button" value="Parking: OFF" id="ParkingButton" onclick="parkingOnOff();">
+                <input type="button" value="OFF" id="ParkingButton" onclick="parkingOnOff();">
               </div>
           </div>
           <p class="paragraph">This category looks at the different parking spots through out 
@@ -236,7 +236,7 @@ on the map. </p>
               </div>
               <div class="wrapper-right">
                 <h2 class="heading">Green Spaces</h2>
-                <input type="button" value="Greenery: OFF" id="GreenButton" onclick="greenOnOff();">
+                <input type="button" value="OFF" id="GreenButton" onclick="greenOnOff();">
               </div>
           </div>
           <p class="paragraph">This overlay displays all of the green areas in the city of Delft.</p>
@@ -249,7 +249,7 @@ on the map. </p>
                 </div>
                 <div class="wrapper-right">
                     <h2 class="heading">Satisfaction Levels</h2>
-                    <input type="button" value="Traffic: OFF" id="TrafficButton" onclick="trafficOnOff();">
+                    <input type="button" value="OFF" id="TrafficButton" onclick="trafficOnOff();">
                 </div>
             </div>
             <p class="paragraph">This data overlay shows resident satisfaction levels in each district.</p>
