--- a/index.html
+++ b/index.html
@@ -134,10 +134,7 @@
 		  
 		<li>
 			<h2 class="context-menu">2. Mobility</h2>
-			<p class="context-menu" style="margin-left: 0;">This category looks at the mobility of the citizens of Delft. it helps to analyse how difficult it is for citizens to move around their city, and help identify future mobility problems before they develop. this category is broken down into 5 sub-categories; 
-				
-			<br> <br> Clicking a particular data-set provides more information about said data-set.
-			
+			<p class="context-menu" style="margin-left: 0;">This category looks at the mobility of the citizens of Delft. it helps to analyse how difficult it is for citizens to move around their city, and help identify future mobility problems before they develop. this category is broken down into 5 sub-categories; 			
 			</p> 
 			
 		</li>
@@ -274,7 +271,7 @@ on the map. </p>
 	  <ul class="context-menu">
         <li>
 			<h2 class="context-menu">6. Facilities</h2>
-			<p class="context-menu" style="margin-left: 0;">The facilities category looks at the different types of facilities and services offered by the city of delft, and the service range of these facilitates.  these facilities have been broken down into 5 sub categories; health institutions, retail, educational, sports and cultural facilities. turning on these categories displays their locations and their service bubbles. The service bubbles show the range in which the stores attract customers, while the color intensity represents the number of customers.
+			<p class="context-menu" style="margin-left: 0;">The facilities category looks at the different types of facilities and services offered by the city of delft, and the service range of these facilitates.  these facilities have been broken down into 5 sub categories; health institutions, retail, educational, sports and cultural facilities. turning on these categories displays their locations and their service bubbles.
 			<br> <br>
 			<b>This page is currently work in progress.</b>
 			</p> 
